[package]
name = "lura"
version = "0.1.3"
authors = ["Nicholas A. Zigarovich <nick@zigarovich.io>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ecks0/lura-rs"
repository = "https://github.com/ecks0/lura-rs"
readme = "README.md"
description = "Devops development helpers"

[features]
default = ["all"]
sync = []
async = ["async-std", "tokio", "tokio-compat"]
lua = ["sync", "rlua", "rustyline"]
all = ["async", "lua"]

[dependencies]
log = "0.4.11"
thiserror = "1.0.20"
anyhow = "1.0.32"

num = "0.3.0"
num-traits = "0.2.12"
rand = "0.7.3"

serde = "1.0.114"
serde_json = "1.0.56"
toml = "0.5.6"
regex = "1.3.9"

tempdir = "0.3.7"
which = "4.0.2"
Inflector = "0.11.4"

templar = "0.4.0"
include_dir = "0.6.0"
glob = "0.3.0" # we dont' use glob, but include_dir returns errors from it

reqwest = { version = "0.10.7", features = ["blocking"] }

rustyline = { version = "6.2.0", optional = true }
rlua = { version = "0.17.0", optional = true }

async-std = { version = "1.6.2", optional = true }
tokio = { version = "0.2.22", features = ["fs", "process"], optional = true }
tokio-compat = { version = "0.1.6", optional = true }
