[package]
name = "lura"
version = "0.1.3"
authors = ["Nicholas A. Zigarovich <nick@zigarovich.io>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ecks0/lura-rs"
repository = "https://github.com/ecks0/lura-rs"
readme = "README.md"
description = "Devops development helpers"

[features]

default = ["all"]
all = [
  "backoff", "config", "fs", "fs_async", "http", "progs",
  "progs_async", "merge", "relic", "run", "run_async",
  "template", "tokio_rt",
]

backoff = ["num", "num-traits"]
config = ["unstructured", "merge", "toml"]
fs = ["regex", "run", "tempdir", "which"]
fs_async = ["fs", "run_async"]
http = ["anyhow", "fs", "reqwest", "url"]
progs = ["fs", "run", "serde_json"]
progs_async = ["fs_async", "run_async"]
merge = ["serde_json", "toml"]
relic = ["fs", "glob", "include_dir", "template"]
run = ["anyhow", "rand", "serde_json", "which"]
run_async = ["async-std", "fs", "tokio", "which"]
template = ["fs", "templar", "unstructured"]
tokio_rt = ["tokio", "tokio-compat"]

[dependencies]

lazy_static = "1.4.0"
log = "0.4.11"
thiserror = "1.0.20"

anyhow = { version = "1.0.32", optional = true }
async-std = { version = "1.6.2", optional = true }
glob = { version = "0.3.0", optional = true }
include_dir = { version = "0.6.0", optional = true }
num = { version = "0.3.0", optional = true }
num-traits = { version = "0.2.12", optional = true }
rand = { version = "0.7.3", optional = true }
regex = { version = "1.3.9", optional = true }
reqwest = { version = "0.10.7", features = ["blocking"], optional = true }
serde_json = { version = "1.0.56", optional = true }
tempdir = { version = "0.3.7", optional = true }
templar = { version = "0.4.0", optional = true }
tokio = { version = "0.2.22", features = ["fs", "process"], optional = true }
tokio-compat = { version = "0.1.6", optional = true }
toml = { version = "0.5.6", optional = true }
unstructured = { version = "0.3.1", optional = true }
url = { version = "2.1.1", optional = true }
which = { version = "4.0.2", optional = true }
