[package]
name = "lura"
version = "0.1.4"
authors = ["Nicholas A. Zigarovich <nick@zigarovich.io>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ecks0/lura-rs"
repository = "https://github.com/ecks0/lura-rs"
readme = "README.md"
description = "Devops automation helpers"

[features]

default = ["all"]
all = ["config", "fs", "http", "logging", "merge", "relic", "template"]

config = ["unstructured", "merge", "toml"]
fs = ["rand", "regex", "tempdir"]
http = ["anyhow", "fs", "reqwest", "url"]
logging = ["chrono", "fern"]
merge = ["serde_json", "toml"]
relic = ["fs", "glob", "include_dir", "template"]
template = ["fs", "templar", "unstructured"]

[dependencies]

lazy_static = "1.4.0"
log = "0.4.11"
thiserror = "1.0.20"

anyhow = { version = "1.0.32", optional = true }
chrono = { version = "0.4.15", optional = true }
fern = { version = "0.6.0", optional = true }
glob = { version = "0.3.0", optional = true }
include_dir = { version = "0.6.0", optional = true }
rand = { version = "0.7.3", optional = true }
regex = { version = "1.3.9", optional = true }
reqwest = { version = "0.10.7", features = ["blocking"], optional = true }
serde_json = { version = "1.0.56", optional = true }
tempdir = { version = "0.3.7", optional = true }
templar = { version = "0.4.0", optional = true }
toml = { version = "0.5.6", optional = true }
unstructured = { version = "0.3.1", optional = true }
url = { version = "2.1.1", optional = true }
